Added new features -expenses -seperate the navigation logic -fix break time

--- a/public/attendance.html
+++ b/public/attendance.html
@@ -11,10 +11,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="css/custom.css" />
     <script src="js/attendance.js" defer></script>
+    <script defer src="js/navigation.js"></script>
   </head>
   <body class="bg-gray-50 min-h-screen flex flex-col">
-    <nav class="hidden md:flex justify-between items-center bg-white shadow px-6 py-3">
+    <!-- <nav class="hidden md:flex justify-between items-center bg-white shadow px-6 py-3">
       <div class="flex items-center gap-3">
         <img id="user-img" src="https://via.placeholder.com/40" alt="User" class="w-10 h-10 rounded-full" />
         <div class="flex flex-col">
@@ -37,9 +39,11 @@
         <button id="history-btn"><i class="fas fa-message text-lg"></i></button>
         <button id="logout-btn"><i class="fas fa-sign-out-alt text-lg"></i></button>
       </div>
-    </nav>
+    </nav> -->
 
-    <header class="text-center py-6 bg-gradient-to-r from-blue-600 to-blue-400 text-white">
+    <header
+      class="text-center py-6 bg-gradient-to-r from-blue-600 to-blue-400 text-white"
+    >
       <h2 id="attendance-status" class="text-xl font-semibold">Attendance</h2>
     </header>
 
@@ -67,14 +71,32 @@
       </div>
 
       <div class="flex justify-center gap-4">
-        <button id="btn-checkin" class="px-6 py-3 bg-green-600 text-white rounded-lg shadow hover:bg-green-700">Check In</button>
-        <button id="btn-break" class="px-6 py-3 bg-yellow-500 text-white rounded-lg shadow hover:bg-yellow-600 hidden">Break</button>
-        <button id="btn-checkout" class="px-6 py-3 bg-red-600 text-white rounded-lg shadow hover:bg-red-700 hidden">Check Out</button>
+        <button
+          id="btn-checkin"
+          class="px-6 py-3 bg-green-600 text-white rounded-lg shadow hover:bg-green-700"
+        >
+          Check In
+        </button>
+        <button
+          id="btn-break"
+          class="px-6 py-3 bg-yellow-500 text-white rounded-lg shadow hover:bg-yellow-600 hidden"
+        >
+          Break
+        </button>
+        <button
+          id="btn-checkout"
+          class="px-6 py-3 bg-red-600 text-white rounded-lg shadow hover:bg-red-700 hidden"
+        >
+          Check Out
+        </button>
       </div>
 
       <section>
         <h3 class="text-lg font-semibold mb-3">Today’s Session</h3>
-        <div id="today-session" class="bg-white p-4 rounded-lg shadow space-y-2">
+        <div
+          id="today-session"
+          class="bg-white p-4 rounded-lg shadow space-y-2"
+        >
           <p id="session-status" class="text-gray-500">No active session</p>
           <p id="session-clockin"></p>
           <p id="session-clockout"></p>
@@ -82,12 +104,17 @@
         </div>
       </section>
 
-      <section>
+      <section id="history-container">
         <h3 class="text-lg font-semibold mb-3">Attendance History</h3>
         <ul id="history-list" class="space-y-3"></ul>
-        <div class="text-center mt-3">
-          <button id="btn-showmore" class="px-4 py-2 bg-gray-200 rounded-lg hover:bg-gray-300">Show More</button>
-        </div>
+        <!-- <div class="text-center mt-3">
+          <button
+            id="btn-showmore"
+            class="px-4 py-2 bg-gray-200 rounded-lg hover:bg-gray-300"
+          >
+            Show More
+          </button>
+        </div> -->
       </section>
 
       <section id="manager-section" class="hidden">
@@ -101,12 +128,12 @@
       </section>
     </main>
 
-    <nav class="fixed bottom-0 left-0 w-full bg-white shadow-inner md:hidden flex justify-around py-3">
+    <!-- <nav class="fixed bottom-0 left-0 w-full bg-white shadow-inner md:hidden flex justify-around py-3">
       <button class="mobile-nav-btn" data-page="index"><i class="fas fa-home text-lg"></i></button>
       <button class="mobile-nav-btn text-blue-600" data-page="attendance"><i class="fas fa-clock text-lg"></i></button>
       <button class="mobile-nav-btn" data-page="tasks"><i class="fas fa-clipboard-check text-lg"></i></button>
       <button class="mobile-nav-btn" data-page="expenses"><i class="fas fa-dollar-sign text-lg"></i></button>
       <button class="mobile-nav-btn" data-page="leaves"><i class="fas fa-calendar-alt text-lg"></i></button>
-    </nav>
+    </nav> -->
   </body>
 </html>
