--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="css/custom.css">
   <script defer src="js/index.js"></script>
+  <script defer src="js/navigation.js"></script>
 </head>
 <body class="bg-gray-100 flex flex-col h-screen">
-  <nav class="bg-white shadow flex items-center justify-between px-4 py-3">
+  <!-- <nav class="bg-white shadow flex items-center justify-between px-4 py-3">
     <div class="flex items-center gap-3">
       <img id="user-img" src="https://via.placeholder.com/40" alt="User" class="w-10 h-10 rounded-full">
       <div class="flex flex-col">
@@ -35,7 +36,7 @@
         <i class="fa-solid fa-message text-lg"></i>
       </button>
     </div>
-  </nav>
+  </nav> -->
 
   <main class="flex-1 overflow-y-auto p-4 space-y-6">
     <section class="bg-white p-4 rounded shadow">
@@ -54,12 +55,12 @@
     </section>
   </main>
 
-  <nav class="bg-white md:hidden shadow-inner flex justify-around py-3">
+  <!-- <nav class="bg-white md:hidden shadow-inner flex justify-around py-3">
     <button class="mobile-nav-btn" data-page="index"><i class="fa-solid fa-house text-lg"></i></button>
     <button class="mobile-nav-btn" data-page="attendance"><i class="fa-solid fa-clock text-lg"></i></button>
     <button class="mobile-nav-btn" data-page="tasks"><i class="fa-solid fa-clipboard-check text-lg"></i></button>
     <button class="mobile-nav-btn" data-page="expenses"><i class="fa-solid fa-dollar-sign text-lg"></i></button>
     <button class="mobile-nav-btn" data-page="leaves"><i class="fa-solid fa-calendar-days text-lg"></i></button>
-  </nav>
+  </nav> -->
 </body>
 </html>
