--- a/public/expenses.html
+++ b/public/expenses.html
@@ -40,40 +40,8 @@
       </div>
     </section>
 
-<section id="add-expense" class="bg-white shadow rounded-lg p-6">
-  <h2 class="text-lg font-semibold mb-4">Add Expense</h2>
-  <form id="expense-form" class="space-y-4">
-    <div>
-      <label for="expense-amount" class="block text-sm font-medium">Amount</label>
-      <input
-        type="number"
-        step="0.01"
-        id="expense-amount"
-        name="amount"
-        placeholder="Enter amount"
-        class="w-full p-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500"
-        required
-      />
-    </div>
-    <div>
-      <label for="expense-reason" class="block text-sm font-medium">Reason</label>
-      <textarea
-        id="expense-reason"
-        name="reason"
-        placeholder="Enter reason for expense"
-        class="w-full p-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500"
-        required
-      ></textarea>
-    </div>
-    <button
-      type="submit"
-      class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-500"
-    >
-      Submit Expense
-    </button>
-  </form>
-</section>
-
+    <section id="role-based-section" class="bg-white shadow rounded-lg p-6">
+    </section>
 
     <section class="bg-white shadow rounded-lg p-6">
       <div class="flex gap-4 mb-4">
