--- a/public/index.html
+++ b/public/index.html
@@ -1,66 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>HR Dashboard</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="stylesheet" href="css/custom.css">
-  <script defer src="js/index.js"></script>
-  <script defer src="js/navigation.js"></script>
-</head>
-<body class="bg-gray-100 flex flex-col h-screen">
-  <!-- <nav class="bg-white shadow flex items-center justify-between px-4 py-3">
-    <div class="flex items-center gap-3">
-      <img id="user-img" src="https://via.placeholder.com/40" alt="User" class="w-10 h-10 rounded-full">
-      <div class="flex flex-col">
-        <button class="nav-btn" data-page="profile"><span class="font-semibold" id="user-name">Loading...</span></button>
-        <span class="text-sm text-gray-500" id="user-position">Loading...</span>
-      </div>
-    </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>HR Dashboard</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="css/custom.css" />
+    <script defer src="js/index.js"></script>
+    <script defer src="js/navigation.js"></script>
+  </head>
+  <body class="bg-gray-50 min-h-screen flex flex-col">
 
-    <div class="hidden md:flex items-center gap-6">
-      <button class="nav-btn" data-page="index">Home</button>
-      <button class="nav-btn" data-page="attendance">Attendance</button>
-      <button class="nav-btn" data-page="tasks">Tasks</button>
-      <button class="nav-btn" data-page="expenses">Expenses</button>
-      <button class="nav-btn" data-page="leaves">Leaves</button>
-    </div>
+    <header
+      class="text-center py-6 bg-gradient-to-r from-blue-600 to-blue-400 text-white"
+    >
+      <h2 id="attendance-status" class="text-xl font-semibold">Home</h2>
+    </header>
+    <main class="flex-1 overflow-y-auto p-4 space-y-6">
+      <section class="bg-white p-4 rounded shadow">
+        <h2 class="font-semibold text-lg mb-2">My Work Summary</h2>
+        <p id="work-summary" class="text-gray-600">Loading...</p>
+      </section>
 
-    <div class="flex items-center gap-4">
-      <button id="notifications-btn" class="relative">
-        <i class="fa-solid fa-bell text-lg"></i>
-        <span id="notification-badge" class="absolute top-0 right-0 w-2 h-2 bg-red-500 rounded-full hidden"></span>
-      </button>
-      <button id="history-btn">
-        <i class="fa-solid fa-message text-lg"></i>
-      </button>
-    </div>
-  </nav> -->
+      <section class="bg-white p-4 rounded shadow">
+        <h3 class="font-semibold text-md mb-2">Today's Meetings</h3>
+        <div id="meetings-list" class="space-y-2">Loading...</div>
+      </section>
 
-  <main class="flex-1 overflow-y-auto p-4 space-y-6">
-    <section class="bg-white p-4 rounded shadow">
-      <h2 class="font-semibold text-lg mb-2">My Work Summary</h2>
-      <p id="work-summary" class="text-gray-600">Loading...</p>
-    </section>
-
-    <section class="bg-white p-4 rounded shadow">
-      <h3 class="font-semibold text-md mb-2">Today's Meetings</h3>
-      <div id="meetings-list" class="space-y-2">Loading...</div>
-    </section>
-
-    <section class="bg-white p-4 rounded shadow">
-      <h3 class="font-semibold text-md mb-2">Today's Tasks</h3>
-      <div id="tasks-list" class="space-y-2">Loading...</div>
-    </section>
-  </main>
-
-  <!-- <nav class="bg-white md:hidden shadow-inner flex justify-around py-3">
-    <button class="mobile-nav-btn" data-page="index"><i class="fa-solid fa-house text-lg"></i></button>
-    <button class="mobile-nav-btn" data-page="attendance"><i class="fa-solid fa-clock text-lg"></i></button>
-    <button class="mobile-nav-btn" data-page="tasks"><i class="fa-solid fa-clipboard-check text-lg"></i></button>
-    <button class="mobile-nav-btn" data-page="expenses"><i class="fa-solid fa-dollar-sign text-lg"></i></button>
-    <button class="mobile-nav-btn" data-page="leaves"><i class="fa-solid fa-calendar-days text-lg"></i></button>
-  </nav> -->
-</body>
+      <section class="bg-white p-4 rounded shadow">
+        <h3 class="font-semibold text-md mb-2">Today's Tasks</h3>
+        <div id="tasks-list" class="space-y-2">Loading...</div>
+      </section>
+    </main>
+  </body>
 </html>
