--- a/public/profile.html
+++ b/public/profile.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/custom.css">
   <script defer src="js/profile.js"></script>
 </head>
-<body class="bg-gray-100 min-h-screen flex flex-col">
+<body class="bg-gray-100 min-h-screen">
 
   <header class="bg-white shadow flex items-center px-4 py-3">
     <button onclick="window.history.back()" class="text-gray-700">
