--- a/public/leaves.html
+++ b/public/leaves.html
@@ -1,73 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Leaves Management</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="stylesheet" href="css/custom.css" />
-    <script defer src="js/leaves.js"></script>
-    <script defer src="js/navigation.js"></script>
-  </head>
-  <body class="bg-gray-50 min-h-screen flex flex-col">
-    <header class="text-center py-6 bg-gradient-to-r from-blue-600 to-blue-400 text-white">
-      <h2 class="text-xl font-semibold">Leaves Management</h2>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Leaves Management</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  />
+  <link rel="stylesheet" href="css/custom.css" />
+  <script defer src="js/leaves.js"></script>
+  <script defer src="js/navigation.js"></script>
+</head>
+<body class="bg-gray-100 text-gray-900 min-h-screen flex flex-col font-mono">
 
-    <main class="flex-1 container mx-auto p-4 space-y-6">
+  <header class="text-center py-6 bg-gray-800 text-white shadow-lg">
+    <h1 class="text-2xl font-bold tracking-widest">LEAVES MANAGEMENT</h1>
+  </header>
 
-      <section id="leave-form-section" class="bg-white p-6 rounded shadow max-w-md mx-auto">
-        <h3 class="text-lg font-semibold mb-4">Apply for Leave</h3>
-        <form id="leave-form" class="space-y-4">
-          <div>
-            <label for="leave-type" class="block text-sm font-medium">Leave Type</label>
-            <select id="leave-type" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm">
-              <option value="sick">Sick</option>
-              <option value="casual">Casual</option>
-              <option value="vacation">Vacation</option>
-              <option value="other">Other</option>
-            </select>
+  <main class="flex-1 container mx-auto p-4 space-y-8">
+
+    <section id="leave-form-section" class="bg-white p-6 rounded-lg shadow-lg max-w-lg mx-auto hidden">
+      <h2 class="text-xl font-semibold mb-4">Apply for Leave</h2>
+      <form id="leave-form" class="space-y-4">
+        <div>
+          <label for="leave-type" class="block text-sm font-medium">Leave Type</label>
+          <select id="leave-type" class="mt-1 block w-full border border-gray-400 rounded-md p-2 bg-gray-50 text-gray-900">
+            <option value="sick">Sick</option>
+            <option value="casual">Casual</option>
+            <option value="vacation">Vacation</option>
+            <option value="other">Other</option>
+          </select>
+        </div>
+        <div class="flex gap-4">
+          <div class="flex-1">
+            <label for="start-date" class="block text-sm font-medium">Start Date</label>
+            <input type="date" id="start-date" class="mt-1 block w-full border border-gray-400 rounded-md p-2 bg-gray-50 text-gray-900" />
           </div>
-          <div class="flex gap-4">
-            <div>
-              <label for="start-date" class="block text-sm font-medium">Start Date</label>
-              <input type="date" id="start-date" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm" />
-            </div>
-            <div>
-              <label for="end-date" class="block text-sm font-medium">End Date</label>
-              <input type="date" id="end-date" class="mt-1 block w-full border-gray-300 rounded-md shadow-sm" />
-            </div>
+          <div class="flex-1">
+            <label for="end-date" class="block text-sm font-medium">End Date</label>
+            <input type="date" id="end-date" class="mt-1 block w-full border border-gray-400 rounded-md p-2 bg-gray-50 text-gray-900" />
           </div>
-          <button type="submit" class="px-4 py-2 bg-green-600 text-white rounded shadow hover:bg-green-700">Apply</button>
-        </form>
-      </section>
+        </div>
+        <button type="submit" class="px-4 py-2 bg-gray-800 hover:bg-gray-700 text-white font-bold rounded shadow">
+          Apply
+        </button>
+      </form>
+    </section>
 
-      <section id="my-leaves-section" class="hidden bg-white p-4 rounded shadow">
-        <h3 class="text-lg font-semibold mb-3">My Leaves</h3>
-        <ul id="my-leaves-list" class="space-y-2"></ul>
-      </section>
+    <div id="filters-row" class="flex justify-center gap-4 flex-wrap mb-6 hidden">
+      <button data-filter="all" class="filter-btn bg-gray-300 hover:bg-gray-400 px-4 py-2 rounded shadow">All</button>
+      <button data-filter="pending" class="filter-btn bg-gray-200 hover:bg-gray-300 px-4 py-2 rounded shadow">Pending</button>
+      <button data-filter="approved" class="filter-btn bg-gray-200 hover:bg-gray-300 px-4 py-2 rounded shadow">Approved</button>
+      <button data-filter="rejected" class="filter-btn bg-gray-200 hover:bg-gray-300 px-4 py-2 rounded shadow">Rejected</button>
+    </div>
 
-      <section id="all-leaves-section" class="hidden bg-white p-4 rounded shadow">
-        <h3 class="text-lg font-semibold mb-3">All Leaves History</h3>
-        <ul id="all-leaves-list" class="space-y-2"></ul>
-      </section>
+    <section id="my-leaves-section" class="hidden bg-white p-4 rounded-lg shadow-lg">
+      <h2 class="text-lg font-semibold mb-3">My Leaves</h2>
+      <ul id="my-leaves-list" class="space-y-2"></ul>
+    </section>
 
-      <section id="employee-leaves-section" class="hidden bg-white p-4 rounded shadow">
-        <h3 class="text-lg font-semibold mb-3">Department Employee Leaves</h3>
-        <ul id="employee-leaves-list" class="space-y-2"></ul>
-      </section>
+    <section id="employee-leaves-section" class="hidden bg-white p-4 rounded-lg shadow-lg">
+      <h2 class="text-lg font-semibold mb-3">Department Leaves</h2>
+      <ul id="employee-leaves-list" class="space-y-2"></ul>
+    </section>
 
-      <section id="control-panel-section" class="hidden bg-white p-4 rounded shadow">
-        <h3 class="text-lg font-semibold mb-3">Control Panel</h3>
-        <ul id="control-panel-list" class="space-y-2"></ul>
-      </section>
+    <section id="all-leaves-section" class="hidden bg-white p-4 rounded-lg shadow-lg">
+      <h2 class="text-lg font-semibold mb-3">All Leaves</h2>
+      <ul id="all-leaves-list" class="space-y-2"></ul>
+    </section>
 
-    </main>
-  </body>
+    <section id="control-panel-section" class="hidden bg-white p-4 rounded-lg shadow-lg">
+      <h2 class="text-lg font-semibold mb-3">Pending</h2>
+      <div id="approval-stats" class="mb-3 flex gap-4 flex-wrap text-sm font-medium"></div>
+      <ul id="control-panel-list" class="space-y-2"></ul>
+    </section>
+
+  </main>
+
+</body>
 </html>
