--- a/public/personal-data.html
+++ b/public/personal-data.html
@@ -2,95 +2,101 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Personal Info</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="css/custom.css">
   <script defer src="js/personal-data.js"></script>
 </head>
-<body class="bg-gray-100 min-h-screen flex flex-col">
+<body class="bg-gray-100 text-gray-900 min-h-screen flex flex-col font-mono">
 
-  <header class="bg-white shadow flex items-center px-4 py-3">
-    <button onclick="window.history.back()" class="text-gray-700">
+  <header class="flex items-center bg-gray-800 text-white shadow-lg px-4 py-3">
+    <button onclick="window.history.back()" class="text-white hover:text-gray-300 transition">
       <i class="fa-solid fa-chevron-left text-lg"></i>
     </button>
-    <h1 class="flex-1 text-center font-semibold text-lg">Personal Info</h1>
+    <h1 class="flex-1 text-center text-2xl font-bold tracking-widest">PERSONAL INFO</h1>
     <div class="w-6"></div>
   </header>
 
-  <main class="flex-1 mt-6 px-4 space-y-6">
-    <section class="bg-white rounded shadow p-4">
-      <h3 class="font-semibold text-gray-700 mb-3">Personal Information</h3>
+  <main class="flex-1 container mx-auto p-4 space-y-6">
 
-      <form id="personal-form" enctype="multipart/form-data" class="space-y-4">
+    <!-- Avatar Section -->
+    <section class="bg-white p-6 rounded-lg shadow-lg max-w-md mx-auto text-center">
+      <div class="relative inline-block">
+        <img id="avatar-preview" src="https://via.placeholder.com/100" 
+             alt="User" class="w-28 h-28 rounded-full border-4 border-gray-200 shadow-lg">
+        <div class="absolute -bottom-1 right-0 bg-green-500 w-4 h-4 rounded-full border-2 border-white"></div>
+      </div>
+      <label for="avatar" class="mt-3 inline-block bg-blue-500 hover:bg-blue-600 text-white px-5 py-2 rounded-lg font-semibold shadow cursor-pointer transition text-sm">
+        Change Image
+      </label>
+      <input type="file" id="avatar" name="avatar" accept="image/*" class="hidden">
+    </section>
 
-        <div class="flex flex-col items-center mt-6 px-4">
-          <img id="avatar-preview" src="https://via.placeholder.com/100"
-               alt="User" class="w-24 h-24 rounded-full shadow mb-2">
-          <input type="file" id="avatar" name="avatar" accept="image/*" class="hidden">
-          <label for="avatar" class="cursor-pointer bg-blue-500 text-white px-3 py-1 rounded text-sm">
-            Change Image
-          </label>
+    <!-- Personal Info Section -->
+    <section class="bg-white p-6 rounded-lg shadow-lg max-w-md mx-auto">
+      <h2 class="text-lg font-semibold mb-4">Personal Information</h2>
+      <form id="personal-form" class="space-y-4">
+
+        <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
+          <div class="flex flex-col">
+            <label class="text-sm text-gray-500 font-medium">Full Name</label>
+            <input type="text" id="full_name" class="border rounded-md px-3 py-2 bg-gray-50 focus:ring-2 focus:ring-blue-400 focus:outline-none" readonly>
+          </div>
+          <div class="flex flex-col">
+            <label class="text-sm text-gray-500 font-medium">Email</label>
+            <input type="email" id="email" class="border rounded-md px-3 py-2 bg-gray-50 focus:ring-2 focus:ring-blue-400 focus:outline-none" readonly>
+          </div>
+          <div class="flex flex-col">
+            <label class="text-sm text-gray-500 font-medium">Phone</label>
+            <input type="text" id="phone" class="border rounded-md px-3 py-2 bg-gray-50 focus:ring-2 focus:ring-blue-400 focus:outline-none" readonly>
+          </div>
+          <div class="flex flex-col">
+            <label class="text-sm text-gray-500 font-medium">Address</label>
+            <input type="text" id="address" class="border rounded-md px-3 py-2 bg-gray-50 focus:ring-2 focus:ring-blue-400 focus:outline-none" readonly>
+          </div>
+          <div class="flex flex-col">
+            <label class="text-sm text-gray-500 font-medium">City</label>
+            <input type="text" id="city" class="border rounded-md px-3 py-2 bg-gray-50 focus:ring-2 focus:ring-blue-400 focus:outline-none" readonly>
+          </div>
+          <div class="flex flex-col">
+            <label class="text-sm text-gray-500 font-medium">State</label>
+            <input type="text" id="state" class="border rounded-md px-3 py-2 bg-gray-50 focus:ring-2 focus:ring-blue-400 focus:outline-none" readonly>
+          </div>
+          <div class="flex flex-col">
+            <label class="text-sm text-gray-500 font-medium">Country</label>
+            <input type="text" id="country" class="border rounded-md px-3 py-2 bg-gray-50 focus:ring-2 focus:ring-blue-400 focus:outline-none" readonly>
+          </div>
+          <div class="flex flex-col">
+            <label class="text-sm text-gray-500 font-medium">Postal Code</label>
+            <input type="text" id="postal_code" class="border rounded-md px-3 py-2 bg-gray-50 focus:ring-2 focus:ring-blue-400 focus:outline-none" readonly>
+          </div>
+          <div class="flex flex-col">
+            <label class="text-sm text-gray-500 font-medium">Department</label>
+            <input type="text" id="department" class="border rounded-md px-3 py-2 bg-gray-100 focus:ring-2 focus:ring-blue-400 focus:outline-none" readonly>
+          </div>
+          <div class="flex flex-col">
+            <label class="text-sm text-gray-500 font-medium">Position</label>
+            <input type="text" id="position" class="border rounded-md px-3 py-2 bg-gray-100 focus:ring-2 focus:ring-blue-400 focus:outline-none" readonly>
+          </div>
         </div>
 
-        <div class="flex flex-col">
-          <label class="text-sm text-gray-600">Full Name</label>
-          <input type="text" id="full_name" name="full_name" class="border rounded px-3 py-2" readonly />
-        </div>
-
-        <div class="flex flex-col">
-          <label class="text-sm text-gray-600">Email</label>
-          <input type="email" id="email" name="email" class="border rounded px-3 py-2" readonly />
-        </div>
-
-        <div class="flex flex-col">
-          <label class="text-sm text-gray-600">Phone</label>
-          <input type="text" id="phone" name="phone" class="border rounded px-3 py-2" readonly />
-        </div>
-
-        <div class="flex flex-col">
-          <label class="text-sm text-gray-600">Address</label>
-          <input type="text" id="address" name="address" class="border rounded px-3 py-2" readonly />
-        </div>
-
-        <div class="flex flex-col">
-          <label class="text-sm text-gray-600">City</label>
-          <input type="text" id="city" name="city" class="border rounded px-3 py-2" readonly />
-        </div>
-
-        <div class="flex flex-col">
-          <label class="text-sm text-gray-600">State</label>
-          <input type="text" id="state" name="state" class="border rounded px-3 py-2" readonly />
-        </div>
-
-        <div class="flex flex-col">
-          <label class="text-sm text-gray-600">Country</label>
-          <input type="text" id="country" name="country" class="border rounded px-3 py-2" readonly />
-        </div>
-
-        <div class="flex flex-col">
-          <label class="text-sm text-gray-600">Postal Code</label>
-          <input type="text" id="postal_code" name="postal_code" class="border rounded px-3 py-2" readonly />
-        </div>
-
-        <div class="flex flex-col">
-          <label class="text-sm text-gray-600">Department</label>
-          <input type="text" id="department" name="department" class="border rounded px-3 py-2 bg-gray-100" readonly />
-        </div>
-
-        <div class="flex flex-col">
-          <label class="text-sm text-gray-600">Position</label>
-          <input type="text" id="position" name="position" class="border rounded px-3 py-2 bg-gray-100" readonly />
-        </div>
-
-        <div class="flex flex-col md:flex-row space-y-2 md:space-y-0 md:space-x-2 mt-4">
-          <button type="button" id="edit-btn" class="flex-1 bg-yellow-500 text-white py-2 rounded">Change Data</button>
-          <button type="button" id="cancel-btn" class="flex-1 bg-gray-400 text-white py-2 rounded hidden">Cancel</button>
-          <button type="submit" id="save-btn" class="flex-1 bg-blue-600 text-white py-2 rounded hidden">Submit</button>
+        <div class="flex flex-col sm:flex-row gap-2 mt-4">
+          <button type="button" id="edit-btn" class="flex-1 bg-yellow-500 hover:bg-yellow-600 text-white py-2 rounded-lg font-semibold shadow transition">
+            Edit Info
+          </button>
+          <button type="button" id="cancel-btn" class="flex-1 bg-gray-300 hover:bg-gray-400 text-gray-900 py-2 rounded-lg font-semibold shadow hidden transition">
+            Cancel
+          </button>
+          <button type="submit" id="save-btn" class="flex-1 bg-green-500 hover:bg-green-600 text-white py-2 rounded-lg font-semibold shadow hidden transition">
+            Save
+          </button>
         </div>
 
       </form>
     </section>
+
   </main>
 
 </body>
