--- a/public/profile.html
+++ b/public/profile.html
@@ -1,66 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Profile</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="stylesheet" href="css/custom.css">
+  <link rel="stylesheet" href="css/custom.css" />
   <script defer src="js/profile.js"></script>
 </head>
-<body class="bg-gray-100 min-h-screen">
+<body class="bg-gray-100 text-gray-900 min-h-screen flex flex-col font-mono">
 
-  <header class="bg-white shadow flex items-center px-4 py-3">
-    <button onclick="window.history.back()" class="text-gray-700">
+  <header class="flex items-center bg-gray-800 text-white shadow-lg px-4 py-3">
+    <button onclick="window.history.back()" class="text-white hover:text-gray-300">
       <i class="fa-solid fa-chevron-left text-lg"></i>
     </button>
-    <h1 class="flex-1 text-center font-semibold text-lg">Profile</h1>
+    <h1 class="flex-1 text-center text-2xl font-bold tracking-widest">PROFILE</h1>
     <div class="w-6"></div>
   </header>
 
-  <section class="flex flex-col items-center mt-6 px-4">
-    <img id="user-img" src="https://via.placeholder.com/100" alt="User" 
-         class="w-24 h-24 rounded-full shadow">
-    <h2 id="user-name" class="mt-3 text-lg font-semibold">Loading...</h2>
-    <p id="user-position" class="text-gray-500 text-sm">Loading...</p>
-  </section>
+  <main class="flex-1 container mx-auto p-4 space-y-6">
 
-  <main class="flex-1 mt-6 px-4 space-y-6">
+    <section class="bg-white p-6 rounded-lg shadow-lg max-w-md mx-auto text-center">
+      <div class="relative inline-block">
+        <img id="user-img" src="https://via.placeholder.com/100" alt="User" class="w-28 h-28 rounded-full border-4 border-gray-200 shadow-lg">
+        <div class="absolute -bottom-1 right-0 bg-green-500 w-4 h-4 rounded-full border-2 border-white"></div>
+      </div>
+      <h2 id="user-name" class="mt-4 text-xl font-semibold text-gray-800">Loading...</h2>
+      <p id="user-position" class="text-gray-500 text-sm mt-1">Loading...</p>
+    </section>
 
-    <section class="bg-white rounded shadow p-4">
-      <h3 class="font-semibold text-gray-700 mb-3">Contact</h3>
+    <section class="bg-white p-6 rounded-lg shadow-lg max-w-md mx-auto">
+      <h2 class="text-lg font-semibold mb-4">Contact</h2>
       <p><strong>Name:</strong> <span id="contact-name">Loading...</span></p>
       <p><strong>Email:</strong> <span id="contact-email">Loading...</span></p>
       <p><strong>Phone:</strong> <span id="contact-phone">Loading...</span></p>
     </section>
 
-    <section class="bg-white rounded shadow p-4">
-      <h3 class="font-semibold text-gray-700 mb-3">Account</h3>
-      <div class="flex flex-col divide-y">
-        <button class="btn-h text-left py-3 flex items-center justify-between" data-page="personal-data.html">
-          <span>Personal Data</span> <i class="fa-solid fa-chevron-right text-gray-400"></i>
+    <section class="bg-white p-6 rounded-lg shadow-lg max-w-md mx-auto">
+      <h2 class="text-lg font-semibold mb-4">Account</h2>
+      <div class="flex flex-col divide-y divide-gray-200">
+        <button class="btn-h text-left py-3 flex items-center justify-between hover:bg-gray-50 transition" data-page="personal-data.html">
+          <span class="font-medium text-gray-800">Personal Data</span>
+          <i class="fa-solid fa-chevron-right text-gray-400"></i>
         </button>
-        <button class="btn-h text-left py-3 flex items-center justify-between" data-page="payroll.html">
-          <span>Payroll & Taxes</span> <i class="fa-solid fa-chevron-right text-gray-400"></i>
+        <button class="btn-h text-left py-3 flex items-center justify-between hover:bg-gray-50 transition" data-page="payroll.html">
+          <span class="font-medium text-gray-800">Payroll & Taxes</span>
+          <i class="fa-solid fa-chevron-right text-gray-400"></i>
         </button>
-        <button class="btn-h text-left py-3 flex items-center justify-between" data-page="alerts.html">
-          <span>Alerts</span> <i class="fa-solid fa-chevron-right text-gray-400"></i>
+        <button class="btn-h text-left py-3 flex items-center justify-between hover:bg-gray-50 transition" data-page="alerts.html">
+          <span class="font-medium text-gray-800">Alerts</span>
+          <i class="fa-solid fa-chevron-right text-gray-400"></i>
         </button>
       </div>
     </section>
 
-    <section class="bg-white rounded shadow p-4">
-      <h3 class="font-semibold text-gray-700 mb-3">Settings</h3>
-      <div class="flex flex-col divide-y">
-        <button class="btn-h text-left py-3 flex items-center justify-between" data-page="change-password.html">
-          <span>Change Password</span> <i class="fa-solid fa-chevron-right text-gray-400"></i>
+    <section class="bg-white p-6 rounded-lg shadow-lg max-w-md mx-auto">
+      <h2 class="text-lg font-semibold mb-4">Settings</h2>
+      <div class="flex flex-col divide-y divide-gray-200">
+        <button class="btn-h text-left py-3 flex items-center justify-between hover:bg-gray-50 transition" data-page="change-password.html">
+          <span class="font-medium text-gray-800">Change Password</span>
+          <i class="fa-solid fa-chevron-right text-gray-400"></i>
         </button>
-        <button id="logout-btn" class="text-left py-3 flex items-center justify-between text-red-600">
-          <span>Logout</span> <i class="fa-solid fa-arrow-right-from-bracket"></i>
+        <button id="logout-btn" class="text-left py-3 flex items-center justify-between text-red-600 hover:bg-red-50 transition">
+          <span class="font-medium">Logout</span>
+          <i class="fa-solid fa-arrow-right-from-bracket"></i>
         </button>
       </div>
     </section>
 
   </main>
+
 </body>
 </html>
