--- a/public/profile.html
+++ b/public/profile.html
@@ -11,7 +11,7 @@
 </head>
 <body class="bg-gray-100 text-gray-900 min-h-screen flex flex-col font-mono">
 
-  <header class="flex items-center bg-gray-800 text-white shadow-lg px-4 py-3">
+  <header class="sticky top-0 left-0 z-10 flex items-center bg-gray-800 text-white shadow-lg px-4 py-3">
     <button onclick="window.history.back()" class="text-white hover:text-gray-300">
       <i class="fa-solid fa-chevron-left text-lg"></i>
     </button>
