--- a/public/attendance.html
+++ b/public/attendance.html
@@ -1,108 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Attendance</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="stylesheet" href="css/custom.css" />
-    <script src="js/attendance.js" defer></script>
-    <script defer src="js/navigation.js"></script>
-  </head>
-  <body class="bg-gray-50 min-h-screen flex flex-col">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Attendance</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="css/custom.css" />
+  <script defer src="js/attendance.js"></script>
+  <script defer src="js/navigation.js"></script>
+</head>
+<body class="bg-gray-100 text-gray-900 min-h-screen flex flex-col font-mono">
 
-    <header
-      class="text-center py-6 bg-gradient-to-r from-blue-600 to-blue-400 text-white"
-    >
-      <h2 id="attendance-status" class="text-xl font-semibold">Attendance</h2>
-    </header>
+  <header class="flex items-center bg-gray-900 text-white shadow-lg px-4 py-3">
+    <h1 class="flex-1 text-center text-2xl font-bold tracking-widest">ATTENDANCE</h1>
+    <div class="w-6"></div>
+  </header>
 
-    <main class="flex-1 container mx-auto p-4 space-y-6">
-      <div class="flex justify-center items-center gap-4">
-        <div class="bg-white rounded-xl shadow p-4 w-40 text-center">
-          <p class="text-sm text-gray-500">Date</p>
-          <p id="current-date" class="text-lg font-bold">--/--/----</p>
-        </div>
-        <div class="bg-white rounded-xl shadow p-4 w-40 text-center">
-          <p class="text-sm text-gray-500">Time</p>
-          <p id="current-time" class="text-lg font-bold">--:--:--</p>
-        </div>
+  <main class="flex-1 container mx-auto p-4 space-y-6">
+
+    <div class="grid grid-cols-2 sm:grid-cols-4 gap-4">
+      <div class="bg-white rounded-xl shadow-lg p-4 text-center hover:shadow-xl transition">
+        <p class="text-sm text-gray-500">Date</p>
+        <p id="current-date" class="text-lg font-bold">--/--/----</p>
       </div>
-
-      <div class="flex justify-center items-center gap-4">
-        <div class="bg-white rounded-xl shadow p-6 w-48 text-center">
-          <p class="text-sm text-gray-500">Live Timer</p>
-          <p id="live-timer" class="text-2xl font-bold">00:00:00</p>
-        </div>
-        <div class="bg-white rounded-xl shadow p-6 w-48 text-center">
-          <p class="text-sm text-gray-500">Total Hours</p>
-          <p id="total-hours" class="text-2xl font-bold">0</p>
-        </div>
+      <div class="bg-white rounded-xl shadow-lg p-4 text-center hover:shadow-xl transition">
+        <p class="text-sm text-gray-500">Time</p>
+        <p id="current-time" class="text-lg font-bold">--:--:--</p>
       </div>
-
-      <div class="flex justify-center gap-4">
-        <button
-          id="btn-checkin"
-          class="px-6 py-3 bg-green-600 text-white rounded-lg shadow hover:bg-green-700"
-        >
-          Check In
-        </button>
-        <button
-          id="btn-break"
-          class="px-6 py-3 bg-yellow-500 text-white rounded-lg shadow hover:bg-yellow-600 hidden"
-        >
-          Break
-        </button>
-        <button
-          id="btn-checkout"
-          class="px-6 py-3 bg-red-600 text-white rounded-lg shadow hover:bg-red-700 hidden"
-        >
-          Check Out
-        </button>
+      <div class="bg-white rounded-xl shadow-lg p-4 text-center hover:shadow-xl transition">
+        <p class="text-sm text-gray-500">Live Timer</p>
+        <p id="live-timer" class="text-2xl font-bold">00:00:00</p>
       </div>
+      <div class="bg-white rounded-xl shadow-lg p-4 text-center hover:shadow-xl transition">
+        <p class="text-sm text-gray-500">Total Hours</p>
+        <p id="total-hours" class="text-2xl font-bold">0</p>
+      </div>
+    </div>
 
-      <section>
-        <h3 class="text-lg font-semibold mb-3">Today’s Session</h3>
-        <div
-          id="today-session"
-          class="bg-white p-4 rounded-lg shadow space-y-2"
-        >
-          <p id="session-status" class="text-gray-500">No active session</p>
-          <p id="session-clockin"></p>
-          <p id="session-clockout"></p>
-          <p id="session-breaks"></p>
-        </div>
-      </section>
+    <div class="flex flex-col sm:flex-row justify-center gap-4 mt-4">
+      <button id="btn-checkin" class="flex-1 px-6 py-3 bg-black text-white rounded-xl shadow hover:bg-gray-800 transition font-semibold">Check In</button>
+      <button id="btn-break" class="flex-1 px-6 py-3 bg-gray-700 text-white rounded-xl shadow hover:bg-gray-600 transition font-semibold hidden">Break</button>
+      <button id="btn-checkout" class="flex-1 px-6 py-3 bg-gray-900 text-white rounded-xl shadow hover:bg-gray-800 transition font-semibold hidden">Check Out</button>
+    </div>
 
-      <section id="history-container">
-        <h3 class="text-lg font-semibold mb-3">Attendance History</h3>
-        <ul id="history-list" class="space-y-3"></ul>
-        <!-- <div class="text-center mt-3">
-          <button
-            id="btn-showmore"
-            class="px-4 py-2 bg-gray-200 rounded-lg hover:bg-gray-300"
-          >
-            Show More
-          </button>
-        </div> -->
-      </section>
+    <section class="bg-white p-6 rounded-xl shadow-lg hover:shadow-xl transition">
+      <h2 class="text-lg font-semibold mb-4 flex items-center space-x-2">
+        <i class="fa-solid fa-clock text-black"></i>
+        <span>Today’s Session</span>
+      </h2>
+      <div id="today-session" class="space-y-2 text-gray-700">
+        <p id="session-status">No active session</p>
+        <p id="session-clockin"></p>
+        <p id="session-clockout"></p>
+        <p id="session-breaks"></p>
+      </div>
+    </section>
 
-      <section id="manager-section" class="hidden">
-        <h3 class="text-lg font-semibold mb-3">Department Attendance</h3>
-        <ul id="department-list" class="space-y-2"></ul>
-      </section>
+    <section class="bg-white p-6 rounded-xl shadow-lg hover:shadow-xl transition">
+      <h2 class="text-lg font-semibold mb-4 flex items-center space-x-2">
+        <i class="fa-solid fa-history text-black"></i>
+        <span>Attendance History</span>
+      </h2>
+      <ul id="history-list" class="space-y-2 text-gray-700"></ul>
+    </section>
 
-      <section id="hr-section" class="hidden">
-        <h3 class="text-lg font-semibold mb-3">All Employees Attendance</h3>
-        <ul id="hr-list" class="space-y-2"></ul>
-      </section>
-    </main>
+    <section id="manager-section" class="bg-white p-6 rounded-xl shadow-lg hover:shadow-xl transition hidden">
+      <h2 class="text-lg font-semibold mb-4 flex items-center space-x-2">
+        <i class="fa-solid fa-users text-black"></i>
+        <span>Department Attendance</span>
+      </h2>
+      <ul id="department-list" class="space-y-2 text-gray-700"></ul>
+    </section>
 
-  </body>
+    <section id="hr-section" class="bg-white p-6 rounded-xl shadow-lg hover:shadow-xl transition hidden">
+      <h2 class="text-lg font-semibold mb-4 flex items-center space-x-2">
+        <i class="fa-solid fa-user-tie text-black"></i>
+        <span>All Employees Attendance</span>
+      </h2>
+      <ul id="hr-list" class="space-y-2 text-gray-700"></ul>
+    </section>
+
+  </main>
+
+</body>
 </html>
