--- a/public/auth.html
+++ b/public/auth.html
@@ -6,56 +6,68 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="css/custom.css">
 </head>
-<body class="bg-gray-100 flex items-center justify-center h-screen">
+<body class="bg-gray-100 flex items-center justify-center min-h-screen font-mono">
 
-<div class="bg-white p-8 rounded shadow-md w-96">
-  <h1 class="text-2xl font-bold mb-4 text-center">HR System</h1>
+  <div class="bg-white p-8 rounded-xl shadow-lg w-96 hover:shadow-xl transition">
+    <h1 class="text-3xl font-bold mb-6 text-center text-gray-900 tracking-widest">HR SYSTEM</h1>
 
-  <p id="message" class="text-red-500 mb-4 text-center hidden"></p>
+    <p id="message" class="text-red-500 mb-4 text-center hidden"></p>
 
-  <!-- LOGIN -->
-  <form id="login-form">
-    <input type="hidden" name="action" value="login">
-    <label class="block mb-2">Email</label>
-    <input type="email" name="email" class="w-full p-2 border rounded mb-4" required>
-    <label class="block mb-2">Password</label>
-    <input type="password" name="password" class="w-full p-2 border rounded mb-4" required>
-    <button type="submit" class="w-full bg-blue-600 text-white p-2 rounded hover:bg-blue-700 mb-2">Login</button>
-    <p class="text-sm text-center">
-      <a href="#" id="show-signup" class="text-blue-600 hover:underline">Sign Up</a> |
-      <a href="#" id="show-forgot" class="text-blue-600 hover:underline">Forgot Password?</a>
-    </p>
-  </form>
+    <form id="login-form" class="space-y-4">
+      <input type="hidden" name="action" value="login">
+      <div class="flex flex-col">
+        <label class="text-gray-600 font-medium mb-1">Email</label>
+        <input type="email" name="email" class="border border-gray-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-black focus:outline-none" required>
+      </div>
+      <div class="flex flex-col">
+        <label class="text-gray-600 font-medium mb-1">Password</label>
+        <input type="password" name="password" class="border border-gray-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-black focus:outline-none" required>
+      </div>
+      <button type="submit" class="w-full bg-black hover:bg-gray-800 text-white py-2 rounded-lg font-semibold shadow transition">Login</button>
+      <p class="text-sm text-center text-gray-500">
+        <a href="#" id="show-signup" class="text-black hover:underline">Sign Up</a> |
+        <a href="#" id="show-forgot" class="text-black hover:underline">Forgot Password?</a>
+      </p>
+    </form>
 
-  <!-- SIGNUP -->
-  <form id="signup-form" class="hidden">
-    <input type="hidden" name="action" value="signup">
-    <label class="block mb-2">Name</label>
-    <input type="text" name="name" class="w-full p-2 border rounded mb-4" required>
-    <label class="block mb-2">Email</label>
-    <input type="email" name="email" class="w-full p-2 border rounded mb-4" required>
-    <label class="block mb-2">Password</label>
-    <input type="password" name="password" class="w-full p-2 border rounded mb-4" required>
-    <label class="block mb-2">Confirm Password</label>
-    <input type="password" name="confirm_password" class="w-full p-2 border rounded mb-4" required>
-    <button type="submit" class="w-full bg-green-600 text-white p-2 rounded hover:bg-green-700 mb-2">Sign Up</button>
-    <p class="text-sm text-center">
-      <a href="#" id="back-to-login1" class="text-blue-600 hover:underline">Back to Login</a>
-    </p>
-  </form>
+    <form id="signup-form" class="hidden space-y-4">
+      <input type="hidden" name="action" value="signup">
+      <div class="flex flex-col">
+        <label class="text-gray-600 font-medium mb-1">Name</label>
+        <input type="text" name="name" class="border border-gray-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-black focus:outline-none" required>
+      </div>
+      <div class="flex flex-col">
+        <label class="text-gray-600 font-medium mb-1">Email</label>
+        <input type="email" name="email" class="border border-gray-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-black focus:outline-none" required>
+      </div>
+      <div class="flex flex-col">
+        <label class="text-gray-600 font-medium mb-1">Password</label>
+        <input type="password" name="password" class="border border-gray-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-black focus:outline-none" required>
+      </div>
+      <div class="flex flex-col">
+        <label class="text-gray-600 font-medium mb-1">Confirm Password</label>
+        <input type="password" name="confirm_password" class="border border-gray-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-black focus:outline-none" required>
+      </div>
+      <button type="submit" class="w-full bg-black hover:bg-gray-800 text-white py-2 rounded-lg font-semibold shadow transition">Sign Up</button>
+      <p class="text-sm text-center text-gray-500">
+        <a href="#" id="back-to-login1" class="text-black hover:underline">Back to Login</a>
+      </p>
+    </form>
 
-  <!-- FORGOT -->
-  <form id="forgot-form" class="hidden">
-    <input type="hidden" name="action" value="forgot">
-    <label class="block mb-2">Enter your email</label>
-    <input type="email" name="email" class="w-full p-2 border rounded mb-4" required>
-    <button type="submit" class="w-full bg-yellow-600 text-white p-2 rounded hover:bg-yellow-700 mb-2">Reset Password</button>
-    <p class="text-sm text-center">
-      <a href="#" id="back-to-login2" class="text-blue-600 hover:underline">Back to Login</a>
-    </p>
-  </form>
-</div>
+    <form id="forgot-form" class="hidden space-y-4">
+      <input type="hidden" name="action" value="forgot">
+      <div class="flex flex-col">
+        <label class="text-gray-600 font-medium mb-1">Enter your email</label>
+        <input type="email" name="email" class="border border-gray-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-black focus:outline-none" required>
+      </div>
+      <button type="submit" class="w-full bg-black hover:bg-gray-800 text-white py-2 rounded-lg font-semibold shadow transition">Reset Password</button>
+      <p class="text-sm text-center text-gray-500">
+        <a href="#" id="back-to-login2" class="text-black hover:underline">Back to Login</a>
+      </p>
+    </form>
 
-<script src="js/auth.js"></script>
+  </div>
+
+  <script src="js/auth.js"></script>
 </body>
 </html>
