--- a/public/change-password.html
+++ b/public/change-password.html
@@ -3,42 +3,43 @@
 <head>
   <meta charset="UTF-8">
   <title>Change Password</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <script defer src="js/change-password.js"></script>
+  <script defer src="js/change-password.js"></script>
 </head>
-<body class="bg-gray-100 flex flex-col min-h-screen justify-center items-center p-4">
+<body class="bg-gray-100 flex items-center justify-center min-h-screen p-4">
 
-  <div class="bg-white shadow rounded p-6 w-full max-w-md">
-    <h1 class="text-2xl font-semibold mb-4 text-center">Change Password</h1>
-    
-    <form id="change-password-form" class="space-y-4">
+  <div class="bg-white shadow-lg rounded-xl w-full max-w-md p-8">
+    <h1 class="text-2xl font-bold mb-6 text-center tracking-wide">HR System</h1>
+
+    <form id="change-password-form" class="space-y-5">
       <div>
-        <label for="current-password" class="block text-gray-700">Current Password</label>
-        <input type="password" id="current-password" class="w-full p-2 border rounded mt-1" required>
+        <label for="current-password" class="block text-gray-700 mb-1">Current Password</label>
+        <input type="password" id="current-password" class="w-full p-3 border rounded-xl focus:outline-none focus:ring-2 focus:ring-black bg-gray-50" required>
       </div>
 
       <div>
-        <label for="new-password" class="block text-gray-700">New Password</label>
-        <input type="password" id="new-password" class="w-full p-2 border rounded mt-1" required>
+        <label for="new-password" class="block text-gray-700 mb-1">New Password</label>
+        <input type="password" id="new-password" class="w-full p-3 border rounded-xl focus:outline-none focus:ring-2 focus:ring-black bg-gray-50" required>
       </div>
 
       <div>
-        <label for="confirm-password" class="block text-gray-700">Confirm New Password</label>
-        <input type="password" id="confirm-password" class="w-full p-2 border rounded mt-1" required>
+        <label for="confirm-password" class="block text-gray-700 mb-1">Confirm New Password</label>
+        <input type="password" id="confirm-password" class="w-full p-3 border rounded-xl focus:outline-none focus:ring-2 focus:ring-black bg-gray-50" required>
       </div>
 
-      <button type="submit" class="w-full bg-blue-600 text-white p-2 rounded hover:bg-blue-700 transition">
+      <button type="submit" class="w-full bg-black text-white p-3 rounded-xl hover:bg-gray-800 transition">
         Change Password
       </button>
     </form>
 
     <p id="message" class="mt-4 text-center text-sm text-red-500"></p>
-    <button id="back-btn" class="mt-4 w-full bg-gray-200 p-2 rounded hover:bg-gray-300 transition">
-      <i class="fa-solid fa-arrow-left mr-2"></i> Back to HomePage
+
+    <button id="back-btn" class="mt-5 w-full bg-gray-200 p-3 rounded-xl hover:bg-gray-300 transition flex items-center justify-center">
+      <i class="fa-solid fa-arrow-left mr-2"></i> Back to Home
     </button>
   </div>
-
 
 </body>
 </html>
