--- a/public/personal-data.html
+++ b/public/personal-data.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Personal Info</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="stylesheet" href="css/custom.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
+  <link rel="stylesheet" href="css/custom.css" />
   <script defer src="js/personal-data.js"></script>
 </head>
 <body class="bg-gray-100 text-gray-900 min-h-screen flex flex-col font-mono">
 
-  <header class="flex items-center bg-gray-800 text-white shadow-lg px-4 py-3">
+  <header class="sticky top-0 left-0 z-10 flex items-center bg-gray-800 text-white shadow-lg px-4 py-3">
     <button onclick="window.history.back()" class="text-white hover:text-gray-300 transition">
       <i class="fa-solid fa-chevron-left text-lg"></i>
     </button>
@@ -21,64 +21,62 @@
 
   <main class="flex-1 container mx-auto p-4 space-y-6">
 
-    <!-- Avatar Section -->
-    <section class="bg-white p-6 rounded-lg shadow-lg max-w-md mx-auto text-center">
+    <section class="bg-white p-6 rounded-lg shadow-lg max-w-md mx-auto text-center relative">
       <div class="relative inline-block">
         <img id="avatar-preview" src="https://via.placeholder.com/100" 
              alt="User" class="w-28 h-28 rounded-full border-4 border-gray-200 shadow-lg">
         <div class="absolute -bottom-1 right-0 bg-green-500 w-4 h-4 rounded-full border-2 border-white"></div>
+        <label for="avatar" id="change-avatar-btn" class="absolute bottom-0 left-1 bg-blue-500 hover:bg-blue-600 text-white w-8 h-8 rounded-full flex items-center justify-center cursor-pointer shadow-lg transition hidden">
+          <i class="fa-solid fa-camera"></i>
+        </label>
+        <input type="file" id="avatar" name="avatar" accept="image/*" class="hidden">
       </div>
-      <label for="avatar" class="mt-3 inline-block bg-blue-500 hover:bg-blue-600 text-white px-5 py-2 rounded-lg font-semibold shadow cursor-pointer transition text-sm">
-        Change Image
-      </label>
-      <input type="file" id="avatar" name="avatar" accept="image/*" class="hidden">
     </section>
 
-    <!-- Personal Info Section -->
     <section class="bg-white p-6 rounded-lg shadow-lg max-w-md mx-auto">
       <h2 class="text-lg font-semibold mb-4">Personal Information</h2>
       <form id="personal-form" class="space-y-4">
 
-        <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
+        <div class="grid grid-cols-1 sm:grid-cols-4 gap-4">
           <div class="flex flex-col">
             <label class="text-sm text-gray-500 font-medium">Full Name</label>
-            <input type="text" id="full_name" class="border rounded-md px-3 py-2 bg-gray-50 focus:ring-2 focus:ring-blue-400 focus:outline-none" readonly>
+            <input type="text" id="full_name" name="full_name" class="border rounded-md px-3 py-2 bg-gray-50 focus:ring-2 focus:ring-blue-400 focus:outline-none" readonly>
           </div>
           <div class="flex flex-col">
             <label class="text-sm text-gray-500 font-medium">Email</label>
-            <input type="email" id="email" class="border rounded-md px-3 py-2 bg-gray-50 focus:ring-2 focus:ring-blue-400 focus:outline-none" readonly>
+            <input type="email" id="email" name="email" class="border rounded-md px-3 py-2 bg-gray-50 focus:ring-2 focus:ring-blue-400 focus:outline-none" readonly>
           </div>
           <div class="flex flex-col">
             <label class="text-sm text-gray-500 font-medium">Phone</label>
-            <input type="text" id="phone" class="border rounded-md px-3 py-2 bg-gray-50 focus:ring-2 focus:ring-blue-400 focus:outline-none" readonly>
+            <input type="text" id="phone" name="phone" class="border rounded-md px-3 py-2 bg-gray-50 focus:ring-2 focus:ring-blue-400 focus:outline-none" readonly>
           </div>
           <div class="flex flex-col">
             <label class="text-sm text-gray-500 font-medium">Address</label>
-            <input type="text" id="address" class="border rounded-md px-3 py-2 bg-gray-50 focus:ring-2 focus:ring-blue-400 focus:outline-none" readonly>
+            <input type="text" id="address" name="address" class="border rounded-md px-3 py-2 bg-gray-50 focus:ring-2 focus:ring-blue-400 focus:outline-none" readonly>
           </div>
           <div class="flex flex-col">
             <label class="text-sm text-gray-500 font-medium">City</label>
-            <input type="text" id="city" class="border rounded-md px-3 py-2 bg-gray-50 focus:ring-2 focus:ring-blue-400 focus:outline-none" readonly>
+            <input type="text" id="city" name="city" class="border rounded-md px-3 py-2 bg-gray-50 focus:ring-2 focus:ring-blue-400 focus:outline-none" readonly>
           </div>
           <div class="flex flex-col">
             <label class="text-sm text-gray-500 font-medium">State</label>
-            <input type="text" id="state" class="border rounded-md px-3 py-2 bg-gray-50 focus:ring-2 focus:ring-blue-400 focus:outline-none" readonly>
+            <input type="text" id="state" name="state" class="border rounded-md px-3 py-2 bg-gray-50 focus:ring-2 focus:ring-blue-400 focus:outline-none" readonly>
           </div>
           <div class="flex flex-col">
             <label class="text-sm text-gray-500 font-medium">Country</label>
-            <input type="text" id="country" class="border rounded-md px-3 py-2 bg-gray-50 focus:ring-2 focus:ring-blue-400 focus:outline-none" readonly>
+            <input type="text" id="country" name="country" class="border rounded-md px-3 py-2 bg-gray-50 focus:ring-2 focus:ring-blue-400 focus:outline-none" readonly>
           </div>
           <div class="flex flex-col">
             <label class="text-sm text-gray-500 font-medium">Postal Code</label>
-            <input type="text" id="postal_code" class="border rounded-md px-3 py-2 bg-gray-50 focus:ring-2 focus:ring-blue-400 focus:outline-none" readonly>
+            <input type="text" id="postal_code" name="postal_code" class="border rounded-md px-3 py-2 bg-gray-50 focus:ring-2 focus:ring-blue-400 focus:outline-none" readonly>
           </div>
           <div class="flex flex-col">
             <label class="text-sm text-gray-500 font-medium">Department</label>
-            <input type="text" id="department" class="border rounded-md px-3 py-2 bg-gray-100 focus:ring-2 focus:ring-blue-400 focus:outline-none" readonly>
+            <input type="text" id="department" name="department" class="border rounded-md px-3 py-2 bg-gray-100 focus:ring-2 focus:ring-blue-400 focus:outline-none" readonly>
           </div>
           <div class="flex flex-col">
             <label class="text-sm text-gray-500 font-medium">Position</label>
-            <input type="text" id="position" class="border rounded-md px-3 py-2 bg-gray-100 focus:ring-2 focus:ring-blue-400 focus:outline-none" readonly>
+            <input type="text" id="position" name="position" class="border rounded-md px-3 py-2 bg-gray-100 focus:ring-2 focus:ring-blue-400 focus:outline-none" readonly>
           </div>
         </div>
 
