ADDED: new logic in personal-data.php, redefine what hr could do, user now could cancel any submitted expence , move approving and rejecting to new form

--- a/public/auth.html
+++ b/public/auth.html
@@ -5,6 +5,7 @@
   <title>HR - Auth</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="css/custom.css">
+  <script type="module" src="./js/auth.js" defer></script>
 </head>
 <body class="bg-gray-100 flex items-center justify-center min-h-screen font-mono">
 
@@ -68,6 +69,5 @@
 
   </div>
 
-  <script src="js/auth.js"></script>
 </body>
 </html>
