--- a/public/leaves.html
+++ b/public/leaves.html
@@ -12,8 +12,8 @@
     referrerpolicy="no-referrer"
   />
   <link rel="stylesheet" href="css/custom.css" />
-  <script defer src="js/leaves.js"></script>
-  <script defer src="js/navigation.js"></script>
+  <script type="module" src="./js/leaves.js" defer></script>
+  <script type="module" src="./js/navigation.js" defer></script>
 </head>
 <body class="bg-gray-100 text-gray-900 min-h-screen flex flex-col font-mono">
 
