--- a/public/profile.html
+++ b/public/profile.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="css/custom.css" />
-  <script defer src="js/profile.js"></script>
+  <script type="module" src="js/profile.js" defer></script>
 </head>
 <body class="bg-gray-100 text-gray-900 min-h-screen flex flex-col font-mono">
 
@@ -23,7 +23,7 @@
 
     <section class="bg-white p-6 rounded-lg shadow-lg max-w-md mx-auto text-center">
       <div class="relative inline-block">
-        <img id="user-img" src="https://via.placeholder.com/100" alt="User" class="w-28 h-28 rounded-full border-4 border-gray-200 shadow-lg">
+        <img id="user-img" src="" alt="User" class="w-28 h-28 rounded-full border-4 bg-gray-600 border-gray-200 shadow-lg">
         <div class="absolute -bottom-1 right-0 bg-green-500 w-4 h-4 rounded-full border-2 border-white"></div>
       </div>
       <h2 id="user-name" class="mt-4 text-xl font-semibold text-gray-800">Loading...</h2>
