--- a/public/attendance.html
+++ b/public/attendance.html
@@ -7,8 +7,8 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="css/custom.css" />
-  <script defer src="js/attendance.js"></script>
-  <script defer src="js/navigation.js"></script>
+  <script type="module" src="js/attendance.js" defer></script>
+  <script type="module" src="js/navigation.js" defer></script>
 </head>
 <body class="bg-gray-100 text-gray-900 min-h-screen flex flex-col font-mono">
 
