--- a/public/expenses.html
+++ b/public/expenses.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="css/custom.css" />
-  <script src="js/expenses.js" defer></script>
-  <script src="js/navigation.js" defer></script>
+  <script type="module" src="./js/expenses.js" defer></script>
+  <script type="module" src="./js/navigation.js" defer></script>
 </head>
 <body class="bg-gray-100 text-gray-900 min-h-screen font-mono">
 
@@ -34,17 +34,21 @@
       </div>
     </section>
 
-    <section id="role-based-section" class="bg-white shadow rounded-xl p-6 hover:shadow-xl transition"></section>
+    <section id="role-based-section" class="bg-white shadow rounded-xl p-6 hover:shadow-xl transition">nothing showen here</section>
 
     <section class="bg-white shadow rounded-xl p-6 hover:shadow-xl transition">
       <div class="flex flex-wrap justify-center gap-4 mb-4">
-        <button class="filter-btn px-6 py-2 bg-black text-white font-semibold hover:bg-gray-900 rounded-lg transition">
+        <button data-status="all" class="filter-btn px-6 py-2 bg-green-800 text-white font-semibold hover:bg-yellow-700 rounded-lg transition">
+          All
+          <!-- All (<span id="count-all">0</span>) -->
+        </button>
+        <button  data-status="pending" class="filter-btn px-6 py-2 bg-cyan-900 text-white font-semibold hover:bg-cyan-800 rounded-lg transition">
           Review (<span id="count-review">0</span>)
         </button>
-        <button class="filter-btn px-6 py-2 bg-gray-800 text-white font-semibold hover:bg-gray-700 rounded-lg transition">
+        <button  data-status="approved" class="filter-btn px-6 py-2 bg-fuchsia-950 text-white font-semibold hover:bg-fuchsia-800 rounded-lg transition">
           Approved (<span id="count-approved">0</span>)
         </button>
-        <button class="filter-btn px-6 py-2 bg-red-700 text-white font-semibold hover:bg-red-600 rounded-lg transition">
+        <button  data-status="rejected" class="filter-btn px-6 py-2 bg-red-700 text-white font-semibold hover:bg-red-600 rounded-lg transition">
           Rejected (<span id="count-rejected">0</span>)
         </button>
       </div>
