--- a/public/personal-data.html
+++ b/public/personal-data.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
   <link rel="stylesheet" href="css/custom.css" />
-  <script defer src="js/personal-data.js"></script>
+  <script type="module" src="./js/personal-data.js" defer></script>
 </head>
 <body class="bg-gray-100 text-gray-900 min-h-screen flex flex-col font-mono">
 
@@ -19,11 +19,11 @@
     <div class="w-6"></div>
   </header>
 
-  <main class="flex-1 container mx-auto p-4 space-y-6">
+  <main class="flex-1 container mx-auto p-4 space-y-6 ">
 
-    <section class="bg-white p-6 rounded-lg shadow-lg max-w-md mx-auto text-center relative">
+    <section class="bg-white p-6 rounded-lg shadow-lg max-w-md lg:max-w-3xl mx-auto text-center relative">
       <div class="relative inline-block">
-        <img id="avatar-preview" src="https://via.placeholder.com/100" 
+        <img id="avatar-preview" src="" 
              alt="User" class="w-28 h-28 rounded-full border-4 border-gray-200 shadow-lg">
         <div class="absolute -bottom-1 right-0 bg-green-500 w-4 h-4 rounded-full border-2 border-white"></div>
         <label for="avatar" id="change-avatar-btn" class="absolute bottom-0 left-1 bg-blue-500 hover:bg-blue-600 text-white w-8 h-8 rounded-full flex items-center justify-center cursor-pointer shadow-lg transition hidden">
@@ -33,11 +33,11 @@
       </div>
     </section>
 
-    <section class="bg-white p-6 rounded-lg shadow-lg max-w-md mx-auto">
+    <section class="bg-white p-6 rounded-lg shadow-lg max-w-md lg:max-w-3xl mx-auto">
       <h2 class="text-lg font-semibold mb-4">Personal Information</h2>
       <form id="personal-form" class="space-y-4">
 
-        <div class="grid grid-cols-1 sm:grid-cols-4 gap-4">
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4">
           <div class="flex flex-col">
             <label class="text-sm text-gray-500 font-medium">Full Name</label>
             <input type="text" id="full_name" name="full_name" class="border rounded-md px-3 py-2 bg-gray-50 focus:ring-2 focus:ring-blue-400 focus:outline-none" readonly>
