refix:all php files , auth, profile, home and navigation js files

--- a/public/change-password.html
+++ b/public/change-password.html
@@ -6,37 +6,40 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <script type="module"  src="./js/change-password.js" defer></script>
+  <script type="module" src="./js/change-password.js" defer></script>
 </head>
 <body class="bg-gray-100 flex items-center justify-center min-h-screen p-4">
 
-  <div class="bg-white shadow-lg rounded-xl w-full max-w-md p-8">
-    <h1 class="text-2xl font-bold mb-6 text-center tracking-wide">HR System</h1>
+  <div class="bg-white shadow-lg rounded-2xl w-full max-w-md p-8 space-y-6 border border-gray-200">
+    <div class="text-center">
+      <h1 class="text-3xl font-semibold text-gray-900 mb-1 tracking-wide">HR System</h1>
+      <p class="text-gray-600">Securely update your account password</p>
+    </div>
 
     <form id="change-password-form" class="space-y-5">
       <div>
-        <label for="current-password" class="block text-gray-700 mb-1">Current Password</label>
-        <input type="password" id="current-password" class="w-full p-3 border rounded-xl focus:outline-none focus:ring-2 focus:ring-black bg-gray-50" required>
+        <label for="current-password" class="block text-gray-700 font-medium mb-1">Current Password</label>
+        <input type="password" id="current-password" placeholder="Enter your current password" class="w-full p-3 border border-gray-300 rounded-xl bg-gray-50 text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-600 transition" required>
       </div>
 
       <div>
-        <label for="new-password" class="block text-gray-700 mb-1">New Password</label>
-        <input type="password" id="new-password" class="w-full p-3 border rounded-xl focus:outline-none focus:ring-2 focus:ring-black bg-gray-50" required>
+        <label for="new-password" class="block text-gray-700 font-medium mb-1">New Password</label>
+        <input type="password" id="new-password" placeholder="Enter new password" class="w-full p-3 border border-gray-300 rounded-xl bg-gray-50 text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-600 transition" required>
       </div>
 
       <div>
-        <label for="confirm-password" class="block text-gray-700 mb-1">Confirm New Password</label>
-        <input type="password" id="confirm-password" class="w-full p-3 border rounded-xl focus:outline-none focus:ring-2 focus:ring-black bg-gray-50" required>
+        <label for="confirm-password" class="block text-gray-700 font-medium mb-1">Confirm New Password</label>
+        <input type="password" id="confirm-password" placeholder="Confirm new password" class="w-full p-3 border border-gray-300 rounded-xl bg-gray-50 text-gray-900 placeholder-gray-400 focus:outline-none focus:ring-2 focus:ring-blue-600 transition" required>
       </div>
 
-      <button type="submit" class="w-full bg-black text-white p-3 rounded-xl hover:bg-gray-800 transition">
+      <p id="message" class="text-center text-sm text-blue-600 font-medium"></p>
+
+      <button type="submit" class="w-full bg-blue-600 text-white p-3 rounded-xl font-semibold hover:bg-blue-500 transition">
         Change Password
       </button>
     </form>
 
-    <p id="message" class="mt-4 text-center text-sm text-red-500"></p>
-
-    <button id="back-btn" class="mt-5 w-full bg-gray-200 p-3 rounded-xl hover:bg-gray-300 transition flex items-center justify-center">
+    <button id="back-btn" class="w-full mt-4 bg-gray-100 p-3 rounded-xl hover:bg-gray-200 transition flex items-center justify-center text-gray-800 font-medium border border-gray-300">
       <i class="fa-solid fa-arrow-left mr-2"></i> Back to Home
     </button>
   </div>
