--- a/public/auth.html
+++ b/public/auth.html
@@ -2,68 +2,78 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HR - Auth</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="css/custom.css">
   <script type="module" src="./js/auth.js" defer></script>
 </head>
-<body class="bg-gray-100 flex items-center justify-center min-h-screen font-mono">
+<body class="min-h-screen flex items-center justify-center bg-gray-100 text-gray-900 font-serif">
 
-  <div class="bg-white p-8 rounded-xl shadow-lg w-96 hover:shadow-xl transition">
-    <h1 class="text-3xl font-bold mb-6 text-center text-gray-900 tracking-widest">HR SYSTEM</h1>
+  <div class="relative w-96 p-8 bg-white border border-gray-300 shadow-2xl rounded-md overflow-hidden">
 
-    <p id="message" class="text-red-500 mb-4 text-center hidden"></p>
+    <h1 class="text-3xl font-extrabold mb-8 text-center tracking-widest text-gray-800">
+      HR SYSTEM
+    </h1>
 
-    <form id="login-form" class="space-y-4">
+    <p id="message" class="text-red-600 mb-4 text-center hidden"></p>
+
+    <form id="login-form" class="space-y-5">
       <input type="hidden" name="action" value="login">
       <div class="flex flex-col">
-        <label class="text-gray-600 font-medium mb-1">Email</label>
-        <input type="email" name="email" class="border border-gray-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-black focus:outline-none" required>
+        <label class="text-gray-700 mb-1 uppercase text-xs tracking-wider">Email</label>
+        <input type="email" name="email" class="bg-gray-50 border border-gray-300 text-gray-900 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-700" required>
       </div>
       <div class="flex flex-col">
-        <label class="text-gray-600 font-medium mb-1">Password</label>
-        <input type="password" name="password" class="border border-gray-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-black focus:outline-none" required>
+        <label class="text-gray-700 mb-1 uppercase text-xs tracking-wider">Password</label>
+        <input type="password" name="password" class="bg-gray-50 border border-gray-300 text-gray-900 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-700" required>
       </div>
-      <button type="submit" class="w-full bg-black hover:bg-gray-800 text-white py-2 rounded-lg font-semibold shadow transition">Login</button>
+      <button type="submit" class="w-full bg-blue-800 hover:bg-blue-900 text-white py-2 rounded font-bold tracking-wide shadow transition-all">
+        Login
+      </button>
       <p class="text-sm text-center text-gray-500">
-        <a href="#" id="show-signup" class="text-black hover:underline">Sign Up</a> |
-        <a href="#" id="show-forgot" class="text-black hover:underline">Forgot Password?</a>
+        <a href="#" id="show-signup" class="hover:text-blue-800 transition">Sign Up</a> |
+        <a href="#" id="show-forgot" class="hover:text-blue-800 transition">Forgot Password?</a>
       </p>
     </form>
 
-    <form id="signup-form" class="hidden space-y-4">
+    <form id="signup-form" class="hidden space-y-5">
       <input type="hidden" name="action" value="signup">
       <div class="flex flex-col">
-        <label class="text-gray-600 font-medium mb-1">Name</label>
-        <input type="text" name="name" class="border border-gray-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-black focus:outline-none" required>
+        <label class="text-gray-700 mb-1 uppercase text-xs tracking-wider">Name</label>
+        <input type="text" name="name" class="bg-gray-50 border border-gray-300 text-gray-900 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-700" required>
       </div>
       <div class="flex flex-col">
-        <label class="text-gray-600 font-medium mb-1">Email</label>
-        <input type="email" name="email" class="border border-gray-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-black focus:outline-none" required>
+        <label class="text-gray-700 mb-1 uppercase text-xs tracking-wider">Email</label>
+        <input type="email" name="email" class="bg-gray-50 border border-gray-300 text-gray-900 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-700" required>
       </div>
       <div class="flex flex-col">
-        <label class="text-gray-600 font-medium mb-1">Password</label>
-        <input type="password" name="password" class="border border-gray-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-black focus:outline-none" required>
+        <label class="text-gray-700 mb-1 uppercase text-xs tracking-wider">Password</label>
+        <input type="password" name="password" class="bg-gray-50 border border-gray-300 text-gray-900 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-700" required>
       </div>
       <div class="flex flex-col">
-        <label class="text-gray-600 font-medium mb-1">Confirm Password</label>
-        <input type="password" name="confirm_password" class="border border-gray-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-black focus:outline-none" required>
+        <label class="text-gray-700 mb-1 uppercase text-xs tracking-wider">Confirm Password</label>
+        <input type="password" name="confirm_password" class="bg-gray-50 border border-gray-300 text-gray-900 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-700" required>
       </div>
-      <button type="submit" class="w-full bg-black hover:bg-gray-800 text-white py-2 rounded-lg font-semibold shadow transition">Sign Up</button>
+      <button type="submit" class="w-full bg-blue-800 hover:bg-blue-900 text-white py-2 rounded font-bold tracking-wide shadow transition-all">
+        Sign Up
+      </button>
       <p class="text-sm text-center text-gray-500">
-        <a href="#" id="back-to-login1" class="text-black hover:underline">Back to Login</a>
+        <a href="#" id="back-to-login1" class="hover:text-blue-800 transition">Back to Login</a>
       </p>
     </form>
 
-    <form id="forgot-form" class="hidden space-y-4">
+    <form id="forgot-form" class="hidden space-y-5">
       <input type="hidden" name="action" value="forgot">
       <div class="flex flex-col">
-        <label class="text-gray-600 font-medium mb-1">Enter your email</label>
-        <input type="email" name="email" class="border border-gray-300 rounded-lg px-3 py-2 focus:ring-2 focus:ring-black focus:outline-none" required>
+        <label class="text-gray-700 mb-1 uppercase text-xs tracking-wider">Enter your email</label>
+        <input type="email" name="email" class="bg-gray-50 border border-gray-300 text-gray-900 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-700" required>
       </div>
-      <button type="submit" class="w-full bg-black hover:bg-gray-800 text-white py-2 rounded-lg font-semibold shadow transition">Reset Password</button>
+      <button type="submit" class="w-full bg-blue-800 hover:bg-blue-900 text-white py-2 rounded font-bold tracking-wide shadow transition-all">
+        Reset Password
+      </button>
       <p class="text-sm text-center text-gray-500">
-        <a href="#" id="back-to-login2" class="text-black hover:underline">Back to Login</a>
+        <a href="#" id="back-to-login2" class="hover:text-blue-800 transition">Back to Login</a>
       </p>
     </form>
 
