--- a/public/leaves.html
+++ b/public/leaves.html
@@ -15,20 +15,22 @@
   <script type="module" src="./js/leaves.js" defer></script>
   <script type="module" src="./js/navigation.js" defer></script>
 </head>
-<body class="bg-gray-100 text-gray-900 min-h-screen flex flex-col font-mono">
+<body class="bg-gray-50 text-gray-900 min-h-screen flex flex-col">
 
-  <header class="text-center py-6 bg-gray-800 text-white shadow-lg">
-    <h1 class="text-2xl font-bold tracking-widest">LEAVES MANAGEMENT</h1>
+  <header class="bg-white shadow-sm hover:shadow-md transition-all duration-200 sticky top-0 z-50">
+    <div class="max-w-6xl mx-auto px-4 py-6 text-center">
+      <h1 class="text-2xl font-bold text-blue-900 tracking-wide">LEAVES MANAGEMENT</h1>
+    </div>
   </header>
 
   <main class="flex-1 container mx-auto p-4 space-y-8">
 
-    <section id="leave-form-section" class="bg-white p-6 rounded-lg shadow-lg max-w-lg mx-auto hidden">
-      <h2 class="text-xl font-semibold mb-4">Apply for Leave</h2>
+    <section id="leave-form-section" class="bg-white p-6 rounded-2xl shadow-sm hover:shadow-md transition-all duration-200 max-w-lg mx-auto hidden">
+      <h2 class="text-xl font-semibold mb-4 text-blue-900">Apply for Leave</h2>
       <form id="leave-form" class="space-y-4">
         <div>
-          <label for="leave-type" class="block text-sm font-medium">Leave Type</label>
-          <select id="leave-type" class="mt-1 block w-full border border-gray-400 rounded-md p-2 bg-gray-50 text-gray-900">
+          <label for="leave-type" class="block text-gray-700 font-medium mb-1">Leave Type</label>
+          <select id="leave-type" required class="mt-1 block w-full border border-gray-300 rounded-xl p-3 bg-gray-50 text-gray-900 focus:outline-none focus:ring-2 focus:ring-blue-900 transition-all duration-200">
             <option value="sick">Sick</option>
             <option value="casual">Casual</option>
             <option value="vacation">Vacation</option>
@@ -37,44 +39,45 @@
         </div>
         <div class="flex gap-4">
           <div class="flex-1">
-            <label for="start-date" class="block text-sm font-medium">Start Date</label>
-            <input type="date" id="start-date" class="mt-1 block w-full border border-gray-400 rounded-md p-2 bg-gray-50 text-gray-900" />
+            <label for="start-date" class="block text-gray-700 font-medium mb-1">Start Date</label>
+            <input type="date" id="start-date" required class="mt-1 block w-full border border-gray-300 rounded-xl p-3 bg-gray-50 text-gray-900 focus:outline-none focus:ring-2 focus:ring-blue-900 transition-all duration-200" />
           </div>
           <div class="flex-1">
-            <label for="end-date" class="block text-sm font-medium">End Date</label>
-            <input type="date" id="end-date" class="mt-1 block w-full border border-gray-400 rounded-md p-2 bg-gray-50 text-gray-900" />
+            <label for="end-date" class="block text-gray-700 font-medium mb-1">End Date</label>
+            <input type="date" id="end-date" required class="mt-1 block w-full border border-gray-300 rounded-xl p-3 bg-gray-50 text-gray-900 focus:outline-none focus:ring-2 focus:ring-blue-900 transition-all duration-200" />
           </div>
         </div>
-        <button type="submit" class="px-4 py-2 bg-gray-800 hover:bg-gray-700 text-white font-bold rounded shadow">
+        <p id="message" class="text-center text-sm text-red-500 font-medium"></p>
+        <button type="submit" class="w-full bg-blue-900 text-white p-3 rounded-2xl font-semibold hover:bg-blue-800 transition-all duration-200">
           Apply
         </button>
       </form>
     </section>
 
     <div id="filters-row" class="flex justify-center gap-4 flex-wrap mb-6 hidden">
-      <button data-filter="all" class="filter-btn bg-gray-300 hover:bg-gray-400 px-4 py-2 rounded shadow">All</button>
-      <button data-filter="pending" class="filter-btn bg-gray-200 hover:bg-gray-300 px-4 py-2 rounded shadow">Pending</button>
-      <button data-filter="approved" class="filter-btn bg-gray-200 hover:bg-gray-300 px-4 py-2 rounded shadow">Approved</button>
-      <button data-filter="rejected" class="filter-btn bg-gray-200 hover:bg-gray-300 px-4 py-2 rounded shadow">Rejected</button>
+      <button data-filter="all" class="filter-btn bg-gray-200 hover:bg-gray-300 px-4 py-2 rounded-xl shadow-sm hover:shadow-md transition-all duration-200">All</button>
+      <button data-filter="pending" class="filter-btn bg-gray-200 hover:bg-gray-300 px-4 py-2 rounded-xl shadow-sm hover:shadow-md transition-all duration-200">Pending</button>
+      <button data-filter="approved" class="filter-btn bg-gray-200 hover:bg-gray-300 px-4 py-2 rounded-xl shadow-sm hover:shadow-md transition-all duration-200">Approved</button>
+      <button data-filter="rejected" class="filter-btn bg-gray-200 hover:bg-gray-300 px-4 py-2 rounded-xl shadow-sm hover:shadow-md transition-all duration-200">Rejected</button>
     </div>
 
-    <section id="my-leaves-section" class="hidden bg-white p-4 rounded-lg shadow-lg">
-      <h2 class="text-lg font-semibold mb-3">My Leaves</h2>
+    <section id="my-leaves-section" class="hidden bg-white p-6 rounded-2xl shadow-sm hover:shadow-md transition-all duration-200">
+      <h2 class="text-lg font-semibold mb-3 text-blue-900">My Leaves</h2>
       <ul id="my-leaves-list" class="space-y-2"></ul>
     </section>
 
-    <section id="employee-leaves-section" class="hidden bg-white p-4 rounded-lg shadow-lg">
-      <h2 class="text-lg font-semibold mb-3">Department Leaves</h2>
+    <section id="employee-leaves-section" class="hidden bg-white p-6 rounded-2xl shadow-sm hover:shadow-md transition-all duration-200">
+      <h2 class="text-lg font-semibold mb-3 text-blue-900">Department Leaves</h2>
       <ul id="employee-leaves-list" class="space-y-2"></ul>
     </section>
 
-    <section id="all-leaves-section" class="hidden bg-white p-4 rounded-lg shadow-lg">
-      <h2 class="text-lg font-semibold mb-3">All Leaves</h2>
+    <section id="all-leaves-section" class="hidden bg-white p-6 rounded-2xl shadow-sm hover:shadow-md transition-all duration-200">
+      <h2 class="text-lg font-semibold mb-3 text-blue-900">All Leaves</h2>
       <ul id="all-leaves-list" class="space-y-2"></ul>
     </section>
 
-    <section id="control-panel-section" class="hidden bg-white p-4 rounded-lg shadow-lg">
-      <h2 class="text-lg font-semibold mb-3">Pending</h2>
+    <section id="control-panel-section" class="hidden bg-white p-6 rounded-2xl shadow-sm hover:shadow-md transition-all duration-200">
+      <h2 class="text-lg font-semibold mb-3 text-blue-900">Pending</h2>
       <div id="approval-stats" class="mb-3 flex gap-4 flex-wrap text-sm font-medium"></div>
       <ul id="control-panel-list" class="space-y-2"></ul>
     </section>
