--- a/public/profile.html
+++ b/public/profile.html
@@ -5,39 +5,41 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Profile</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <link rel="stylesheet" href="css/custom.css" />
   <script type="module" src="js/profile.js" defer></script>
 </head>
-<body class="bg-gray-100 text-gray-900 min-h-screen flex flex-col font-mono">
+<body class="bg-gray-100 text-gray-900 min-h-screen flex flex-col">
 
-  <header class="sticky top-0 left-0 z-10 flex items-center bg-gray-800 text-white shadow-lg px-4 py-3">
-    <button onclick="window.history.back()" class="text-white hover:text-gray-300">
+  <header class="sticky top-0 left-0 z-10 flex items-center bg-blue-900 text-white shadow-md px-4 py-3">
+    <button onclick="window.history.back()" class="text-white hover:text-gray-200">
       <i class="fa-solid fa-chevron-left text-lg"></i>
     </button>
     <h1 class="flex-1 text-center text-2xl font-bold tracking-widest">PROFILE</h1>
     <div class="w-6"></div>
   </header>
 
-  <main class="flex-1 container mx-auto p-4 space-y-6">
+  <main class="flex-1 container mx-auto px-4 sm:px-6 lg:px-8 space-y-6">
 
-    <section class="bg-white p-6 rounded-lg shadow-lg max-w-md mx-auto text-center">
+    <section class="bg-white p-6 rounded-lg shadow-lg max-w-4xl mx-auto text-center">
       <div class="relative inline-block">
-        <img id="user-img" src="" alt="User" class="w-28 h-28 rounded-full border-4 bg-gray-600 border-gray-200 shadow-lg">
+        <img id="user-img" src="" alt="User" class="w-28 h-28 rounded-full border-4 bg-gray-300 border-gray-200 shadow-lg object-cover">
         <div class="absolute -bottom-1 right-0 bg-green-500 w-4 h-4 rounded-full border-2 border-white"></div>
       </div>
       <h2 id="user-name" class="mt-4 text-xl font-semibold text-gray-800">Loading...</h2>
       <p id="user-position" class="text-gray-500 text-sm mt-1">Loading...</p>
     </section>
 
-    <section class="bg-white p-6 rounded-lg shadow-lg max-w-md mx-auto">
+    <section class="bg-white p-6 rounded-lg shadow-lg max-w-4xl mx-auto">
       <h2 class="text-lg font-semibold mb-4">Contact</h2>
-      <p><strong>Name:</strong> <span id="contact-name">Loading...</span></p>
-      <p><strong>Email:</strong> <span id="contact-email">Loading...</span></p>
-      <p><strong>Phone:</strong> <span id="contact-phone">Loading...</span></p>
+      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
+        <p><strong>Name:</strong> <span id="contact-name">Loading...</span></p>
+        <p><strong>Email:</strong> <span id="contact-email">Loading...</span></p>
+        <p><strong>Phone:</strong> <span id="contact-phone">Loading...</span></p>
+      </div>
     </section>
 
-    <section class="bg-white p-6 rounded-lg shadow-lg max-w-md mx-auto">
+    <section class="bg-white p-6 rounded-lg shadow-lg max-w-4xl mx-auto">
       <h2 class="text-lg font-semibold mb-4">Account</h2>
       <div class="flex flex-col divide-y divide-gray-200">
         <button class="btn-h text-left py-3 flex items-center justify-between hover:bg-gray-50 transition" data-page="personal-data.html">
@@ -55,7 +57,7 @@
       </div>
     </section>
 
-    <section class="bg-white p-6 rounded-lg shadow-lg max-w-md mx-auto">
+    <section class="bg-white p-6 rounded-lg shadow-lg max-w-4xl mx-auto">
       <h2 class="text-lg font-semibold mb-4">Settings</h2>
       <div class="flex flex-col divide-y divide-gray-200">
         <button class="btn-h text-left py-3 flex items-center justify-between hover:bg-gray-50 transition" data-page="change-password.html">
