Fix the user image and profile update

--- a/public/personal-data.html
+++ b/public/personal-data.html
@@ -86,7 +86,7 @@
           <button type="button" id="cancel-btn" class="flex-1 bg-gray-300 hover:bg-gray-400 text-gray-900 py-2 rounded-lg font-semibold shadow hidden transition">
             Cancel
           </button>
-          <button type="submit" id="save-btn" class="flex-1 bg-green-500 hover:bg-green-600 text-white py-2 rounded-lg font-semibold shadow hidden transition">
+          <button type="button" id="save-btn" class="flex-1 bg-green-500 hover:bg-green-600 text-white py-2 rounded-lg font-semibold shadow hidden transition">
             Save
           </button>
         </div>
