--- a/public/attendance.html
+++ b/public/attendance.html
@@ -7,46 +7,55 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="css/custom.css" />
-  <script type="module" src="js/attendance.js" defer></script>
   <script type="module" src="js/navigation.js" defer></script>
+  <script type="module" src="js/attendance.js" defer></script>
 </head>
-<body class="bg-gray-100 text-gray-900 min-h-screen flex flex-col font-mono">
+<body class="bg-gray-100 text-gray-900 min-h-screen flex flex-col">
 
-  <header class="flex items-center bg-gray-900 text-white shadow-lg px-4 py-3">
+  <header class="sticky top-0 z-10 flex items-center bg-blue-900 text-white shadow-lg px-4 py-3">
+    <button onclick="window.history.back()" class="text-white hover:text-gray-300 transition">
+      <i class="fa-solid fa-chevron-left text-lg"></i>
+    </button>
     <h1 class="flex-1 text-center text-2xl font-bold tracking-widest">ATTENDANCE</h1>
     <div class="w-6"></div>
   </header>
 
-  <main class="flex-1 container mx-auto p-4 space-y-6">
+  <main class="flex-1 container mx-auto px-4 sm:px-6 lg:px-8 space-y-6 mt-4">
 
     <div class="grid grid-cols-2 sm:grid-cols-4 gap-4">
-      <div class="bg-white rounded-xl shadow-lg p-4 text-center hover:shadow-xl transition">
+      <div class="bg-white rounded-2xl shadow-lg p-4 text-center hover:shadow-xl transition">
         <p class="text-sm text-gray-500">Date</p>
         <p id="current-date" class="text-lg font-bold">--/--/----</p>
       </div>
-      <div class="bg-white rounded-xl shadow-lg p-4 text-center hover:shadow-xl transition">
+      <div class="bg-white rounded-2xl shadow-lg p-4 text-center hover:shadow-xl transition">
         <p class="text-sm text-gray-500">Time</p>
         <p id="current-time" class="text-lg font-bold">--:--:--</p>
       </div>
-      <div class="bg-white rounded-xl shadow-lg p-4 text-center hover:shadow-xl transition">
+      <div class="bg-white rounded-2xl shadow-lg p-4 text-center hover:shadow-xl transition">
         <p class="text-sm text-gray-500">Live Timer</p>
         <p id="live-timer" class="text-2xl font-bold">00:00:00</p>
       </div>
-      <div class="bg-white rounded-xl shadow-lg p-4 text-center hover:shadow-xl transition">
+      <div class="bg-white rounded-2xl shadow-lg p-4 text-center hover:shadow-xl transition">
         <p class="text-sm text-gray-500">Total Hours</p>
         <p id="total-hours" class="text-2xl font-bold">0</p>
       </div>
     </div>
 
     <div class="flex flex-col sm:flex-row justify-center gap-4 mt-4">
-      <button id="btn-checkin" class="flex-1 px-6 py-3 bg-black text-white rounded-xl shadow hover:bg-gray-800 transition font-semibold">Check In</button>
-      <button id="btn-break" class="flex-1 px-6 py-3 bg-gray-700 text-white rounded-xl shadow hover:bg-gray-600 transition font-semibold hidden">Break</button>
-      <button id="btn-checkout" class="flex-1 px-6 py-3 bg-gray-900 text-white rounded-xl shadow hover:bg-gray-800 transition font-semibold hidden">Check Out</button>
+      <button id="btn-checkin" class="flex-1 px-6 py-3 bg-blue-600 hover:bg-blue-700 text-white rounded-2xl font-semibold shadow transition">
+        Check In
+      </button>
+      <button id="btn-break" class="flex-1 px-6 py-3 bg-yellow-500 hover:bg-yellow-600 text-white rounded-2xl font-semibold shadow transition hidden">
+        Break
+      </button>
+      <button id="btn-checkout" class="flex-1 px-6 py-3 bg-red-600 hover:bg-red-700 text-white rounded-2xl font-semibold shadow transition hidden">
+        Check Out
+      </button>
     </div>
 
-    <section class="bg-white p-6 rounded-xl shadow-lg hover:shadow-xl transition">
+    <section class="bg-white p-6 rounded-2xl shadow-lg hover:shadow-xl transition">
       <h2 class="text-lg font-semibold mb-4 flex items-center space-x-2">
-        <i class="fa-solid fa-clock text-black"></i>
+        <i class="fa-solid fa-clock text-blue-700"></i>
         <span>Today’s Session</span>
       </h2>
       <div id="today-session" class="space-y-2 text-gray-700">
@@ -57,25 +66,25 @@
       </div>
     </section>
 
-    <section class="bg-white p-6 rounded-xl shadow-lg hover:shadow-xl transition">
+    <section class="bg-white p-6 rounded-2xl shadow-lg hover:shadow-xl transition">
       <h2 class="text-lg font-semibold mb-4 flex items-center space-x-2">
-        <i class="fa-solid fa-history text-black"></i>
+        <i class="fa-solid fa-history text-blue-700"></i>
         <span>Attendance History</span>
       </h2>
       <ul id="history-list" class="space-y-2 text-gray-700"></ul>
     </section>
 
-    <section id="manager-section" class="bg-white p-6 rounded-xl shadow-lg hover:shadow-xl transition hidden">
+    <section id="manager-section" class="bg-white p-6 rounded-2xl shadow-lg hover:shadow-xl transition hidden">
       <h2 class="text-lg font-semibold mb-4 flex items-center space-x-2">
-        <i class="fa-solid fa-users text-black"></i>
+        <i class="fa-solid fa-users text-blue-700"></i>
         <span>Department Attendance</span>
       </h2>
       <ul id="department-list" class="space-y-2 text-gray-700"></ul>
     </section>
 
-    <section id="hr-section" class="bg-white p-6 rounded-xl shadow-lg hover:shadow-xl transition hidden">
+    <section id="hr-section" class="bg-white p-6 rounded-2xl shadow-lg hover:shadow-xl transition hidden">
       <h2 class="text-lg font-semibold mb-4 flex items-center space-x-2">
-        <i class="fa-solid fa-user-tie text-black"></i>
+        <i class="fa-solid fa-user-tie text-blue-700"></i>
         <span>All Employees Attendance</span>
       </h2>
       <ul id="hr-list" class="space-y-2 text-gray-700"></ul>
