--- a/public/profile.html
+++ b/public/profile.html
@@ -46,7 +46,7 @@
           <span class="font-medium text-gray-800">Personal Data</span>
           <i class="fa-solid fa-chevron-right text-gray-400"></i>
         </button>
-        <button class="btn-h text-left py-3 flex items-center justify-between hover:bg-gray-50 transition" data-page="payroll.html">
+        <button class="btn-h text-left py-3 flex items-center justify-between hover:bg-gray-50 transition" data-page="payrolls.html">
           <span class="font-medium text-gray-800">Payroll & Taxes</span>
           <i class="fa-solid fa-chevron-right text-gray-400"></i>
         </button>
